[package]
name = "heating-manager-faerie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.8.0"
sqlx = { version = "0.5", features = [ "decimal", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
log = "0.4"
env_logger = { version = "0.9.0", default-features = false}
main_error = "0.1.1"
rust_decimal = "1.16"
